docker-kubernetes-deployments/real-time-chat-app-deployment/chat-app-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: zeroaninea/chat-frontend:latest
          ports:
            - containerPort: 4200
