docker-kubernetes-deployments/real-time-chat-app-deployment/chat-app-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chat-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
