docker-kubernetes-deployments/real-time-chat-app-deployment/chat-app-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chat-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4200
